# mdmap

./: .dockerignore  .env.prod.example  .gitignore  Caddyfile  docker-compose.prod.yml  docker-compose.yml  ooo.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md
backend/: Cargo.toml  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.backend.prod
backend/migrations/: 20250418151921_cards.up.sql  20250524111115_tags.up.sql  20250524111206_card_tag.up.sql  20250525092453_card_card.up.sql  20250707000000_card_visibility.down.sql  20250707000000_card_visibility.up.sql  20250707010000_users.up.sql  20250707020000_card_is_frame.down.sql  20250707020000_card_is_frame.up.sql  20250707030000_card_type.down.sql  20250707030000_card_type.up.sql  20250708000000_card_ok_count.down.sql  20250708000000_card_ok_count.up.sql  20250708010000_user_api_key.down.sql  20250708010000_user_api_key.up.sql  20250710000000_child_card_relative_position.down.sql  20250710000000_child_card_relative_position.up.sql  20250721012939_update.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  schema.rs
backend/src/db/: card.rs  pool.rs  seed.rs
backend/src/handlers/: card_card.rs  cards.rs  flash_card.rs  tags.rs
backend/src/models/: card.rs  card_card.rs  response.rs  tag.rs  user.rs
backend/src/routes/: mod.rs
backend/src/schema/: dimmension.rs
canvas-wasm/: Cargo.toml
docs/: chatgpt-actions-openapi.yaml
frontend/: Dockerfile.frontend  Dockerfile.frontend.prod  index.html  nginx.conf  (+3 more)
wasm/: Cargo.toml
wasm/src/: lib.rs
(+57 files in other folders)
