[package]
name = "memoapp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors","trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"] }
dotenvy = "0.15"
rand = "0.9"
lipsum = "0.9"

[dev-dependencies]
sqlx-cli = { version = "0.8", features = ["mysql"] }