[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
env_logger = "0.10"
console_error_panic_hook = "0.1.6"
wgpu = "25.0.0"
wasm-bindgen = "0.2.9"
wasm-bindgen-futures = "0.4.30"
bytemuck = { version = "1.22", features = [ "derive" ] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console",
    "EventTarget",
    "MouseEvent"
]}